<resources>
    <string name="app_name">CalculatorIntent</string>
    <string name="calc">Калькулятор</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="root">Корень</string>
    <string name="first_num">Первое число</string>
    <string name="second_num">Второе число</string>
    <string name="result">Результат</string>
</resources>